feat: add Swagger/OpenAPI, ESLint strict rules, CodeQL security, env validation, and dev Compose profile
- Add swagger-jsdoc and swagger-ui-express for API documentation at /api/swagger
- Create ESLint Flat Config with strict Node.js rules (indent 2, quotes single, curly braces)
- Add GitHub Actions CodeQL security scanning workflow
- Add startup environment validation for JWT_SECRET and DATABASE_URL
- Add backend-dev Compose profile with nodemon and live-reload for development
- Fix all ESLint linting issues (0 errors, 14 warnings for console statements)
- Update comprehensive README with Swagger link and dev/prod setup instructions
- Install 46 new dependencies (swagger-jsdoc, swagger-ui-express, eslint-plugin-jest)

--- a/compose.yml
+++ b/compose.yml
@@ -27,13 +27,33 @@ services:
       NODE_ENV: production
       PORT: 3000
       DATABASE_URL: postgresql://admin:secret@postgres:5432/timemanager
-      DB_SYNC: "false"
+      DB_SYNC: "true"
+      JWT_SECRET: ${JWT_SECRET:-change_me_in_production}
     depends_on:
       postgres:
         condition: service_healthy
-    # Uncomment to expose backend directly (optional)
-    # ports:
-    #   - "3000:3000"
+
+  backend-dev:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: timemanager-backend-dev
+    profiles: ["dev"]
+    command: npm run dev
+    volumes:
+      - ./backend/src:/app/src:cached
+      - ./backend/tests:/app/tests:cached
+    environment:
+      NODE_ENV: development
+      PORT: 3000
+      DATABASE_URL: postgresql://admin:secret@postgres:5432/timemanager
+      DB_SYNC: "true"
+      JWT_SECRET: ${JWT_SECRET:-dev_secret_key}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports:
+      - "3000:3000"
 
   nginx:
     image: nginx:1.27-alpine
@@ -47,3 +67,4 @@ services:
 
 volumes:
   pgdata:
+
