fix: add legacy-peer-deps to CI workflow and set JWT_SECRET env var
- Add --legacy-peer-deps flag to npm ci in CI to handle eslint peer dependencies
- Add JWT_SECRET env var required for test environment (validateEnv check)
- Fixes CI test failures on Node 18.x and 20.x

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
 
     env:
       DATABASE_URL: postgresql://admin:secret@localhost:5432/timemanager
+      JWT_SECRET: test_jwt_secret_key_for_ci
       NODE_ENV: test
 
     steps:
@@ -50,7 +51,7 @@ jobs:
           cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Wait for Postgres to be ready
         run: |
