--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
+    "pino": "^10.2.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
